# napview_beta

./: .gitignore  Dockerfile.dockerfile  LICENSE  LICENSES.txt  README.md  requirements.txt  setup.cfg
src/: MANIFEST.in
src/napview/: napview.py
src/napview.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/napview/core/: data_analyzer.py  data_producer.py  data_recorder.py  data_visualizer.py  database_handler.py  napview_backend.py
src/napview/core/static/: channel-modal.js  gui.js  style.css
src/napview/core/templates/: gui.html  index.html
