[metadata]
name = napview
version = 0.1.0
author = Paul Zerr
author_email = zerr.paul@gmail.com
description = Napview
long_description = file: README.md
long_description_content_type = text/markdown
keywords = napview, sleepscoring
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
package_dir =
    =src
packages = find_namespace:
zip_safe = True
include_package_data = True
python_requires = >=3.8
install_requires =
    Scipy==1.14.1
    numpy==1.26.4
    mne==1.8.0
    Flask==3.0.3
    peewee==3.17.6
    pylsl==1.16.2
    usleep_api==0.1.3
    setuptools==70.3.0
    edfio==0.4.3
    joblib==1.4.2
    pandas==2.2.3
    antropy==0.1.6
    lightgbm==4.5.0

[options.packages.find]
where = src

[options.package_data]
napview =
    core/static/**/*
    core/templates/**/*
    core/classifiers/**/*
    eeg.edf

[options.entry_points]
console_scripts =
    napview = napview:main
